--- a/index.htm
+++ b/index.htm
@@ -2,13 +2,32 @@
 <html>
 
 <head>
-<title> Page Title </title> 
+    <style>
+        body{background-color:paleturquoise;}
+        h1{color:purple;}
+        p{color:powderblue}
+    </style>
 </head>
 
 <body>
 
 <h1> This is a heading </h1>
 <p>This is a paragraph </p>
+
+<p><b>This is bold</b></p>
+<p><em>But this is emphasised.</em></p>
+
+<p><i>This is in italics.</i><br><em>But this is emphasised.</em></p>
+
+<h1 style="border:2px solid Tomato;"> solid Tomato </h1>
+<h1 style="border:2px solid SlateBlue;"> SlateBlue </h1>
+<h1 style="border:2px solid Gray"> Gray </h1>
+
+<h1 style="background-color: rgb(255,99,71)"> Red Blue Green </h1>
+
+
+
+
 </body>
 
 </html>
