--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 
 <h1 style="border:2px solid Tomato;"> solid Tomato </h1>
 <h1 style="border:2px solid SlateBlue;"> SlateBlue </h1>
-<h1 style="border:2px solid Gray"> Gray </h1>
+<h1 style="border:2px solid Gray;"> Gray </h1>
 
 <h1 style="background-color: rgb(255,99,71)"> Red Blue Green </h1>
 
